@@ -1,5 +1,11 @@
 2010-11-05 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/peep.c,
+	  src/SDCCpeeph.c:
+	  Fixed #3109557.
+
+2010-11-05 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/peeph-z80.def:
 	  Minor peephole fix.
 
